salt/downloads/bugs/fixes/bug_issue_descriptions/salt-26913
Hello!

When using `salt-run manage.bootstrap ...`, I'm receiving the following error:

```
  File "<string>", line 1
    import urllib; print urllib.urlopen(https://bootstrap.saltstack.com).read()
                                             ^
SyntaxError: invalid syntax
```

The issue appears to be a buggy quotation escape in `runners/manage.py`.  around the script name.
